syntax = "proto3";

package protocol;

// service definition
service Users {
	// service methods
	rpc SignUp (NewUser) returns (Created) {}
	rpc List (Empty) returns (UserList) {}
}

// common practice to represent empty messages
message Empty {}

message NewUser {
	string first_name = 1;
	string last_name = 2;
}

message User {
	string uid = 1;
	string first_name = 2;
	string last_name = 3;
	string created_at = 4;
}

message Created {
	string uid = 1;
}

message UserList {
	repeated User users = 1;
}
